HW04-GC try any GC.